--- a/src/ui/templates/index.hbs
+++ b/src/ui/templates/index.hbs
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <title>Policy App</title>
 
-  <link rel="stylesheet" href="policy-App/css/bootstrap.min.css">
-  <script src="policy-App/js/jquery.js"></script>
-  <script src="policy-App/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="repo-hygiene/css/bootstrap.min.css">
+  <script src="repo-hygiene/js/jquery.js"></script>
+  <script src="repo-hygiene/js/bootstrap.min.js"></script>
 
 </head>
 
@@ -24,7 +24,7 @@
     </div>
     <p>A GitHub application to apply policies to a GitHub environment.</p>
     <br><br><br>
-    <p align="center"><img width="90%" src="policy-App/public/Rules-Concept-2.png"</p>
+    <p align="center"><img width="90%" src="repo-hygiene/public/Rules-Concept-2.png"</p>
 </body>
 
 </html>
